# Harmonic-HN

./: .gitattributes  .gitignore  AGENTS.md  README.md  build.gradle  gradle.properties  settings.gradle
.codex-screenshots/: ui-overflow.xml  ui-settings.xml  ui-start.xml  ui-stories-settings.xml
.github/: dependabot.yml
.github/workflows/: build.yaml  push.yml  tag.yml
app/: build.gradle  lint.xml  proguard-rules.pro
app/adblock/: adblockserverlist.txt
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/foss/res/xml/: preferences_ai_summary.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: changelog.md  reader_mode.js  webview_error.html
app/src/main/cpp/: CMakeLists.txt  local_llama.cpp
app/src/main/res/anim/: activity_fade_out_animation.xml  activity_in_animation.xml  activity_out_animation.xml  fragment_enter.xml  fragment_exit.xml  fragment_pop_enter.xml  fragment_pop_exit.xml  hold.xml
app/src/main/res/color/: comments_op_filter_background_color.xml  compose_submit_background.xml  compose_submit_content.xml  hacker_news_switch_thumb_tint.xml  icon_button_selector.xml  text_selection_highlight.xml
app/src/main/res/drawable-anydpi/: ic_account_circle.xml  (+171 more)
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fdroiddata/metadata/: com.simon.harmonichackernews.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
local_ai_runtime/: build.gradle
local_ai_runtime/src/main/: AndroidManifest.xml
(+448 files in other folders)
